# space-shooter

./: CMakeLists.txt  Declaration Of Ownership (N0631237).docx  Project Asteroids.docx  Project Description.docx  Project Space Shooter (N0631237).docx  README.md  Space Shooter.sln  ~$oject Asteroids.docx
Debug/: Space Shooter.ilk
Engine/Cpp/: GameComponent.cpp  GameObject.cpp  Mesh2D.cpp  RigidBody2D.cpp  Vector2D.cpp
Engine/Cpp/Systems/: Engine.cpp  GameState.cpp  LogicManager.cpp  MessageBus.cpp  Messages.cpp  ObjectManager.cpp  Physics.cpp  Renderer.cpp  System.cpp  TimeManager.cpp  main.cpp
Engine/Headers/: GameComponent.h  GameObject.h  Mesh2D.h  RigidBody2D.h  Vector2D.h
Engine/Headers/Systems/: Engine.h  GameState.h  LogicManager.h  MessageBus.h  Messages.h  ObjectManager.h  Physics.h  Renderer.h  SlotMap.h  System.h  TimeManager.h
Game/Cpp/: Asteroid.cpp  Bullet.cpp  Player.cpp
Game/Headers/: Asteroid.h  Bullet.h  GameObjectTypes.h  Player.h
Space Shooter/: Asteroid.cpp  Asteroid.h  Bullet.cpp  ClassDiagram.cd  Engine.cpp  Engine.h  GameObject.cpp  GameObject.h  LogicManager.cpp  LogicManager.h  MessageBus.cpp  MessageBus.h  Messages.cpp  Messages.h  ObjectManager.cpp  ObjectManager.h  Physics.cpp  Physics.h  Player.cpp  Player.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  Space Shooter.vcxproj  Space Shooter.vcxproj.filters  System.cpp  System.h  TimeManager.cpp  Vector2D.cpp  Vector2D.h  VectorShape.cpp  VectorShape.h  main.cpp
Space Shooter/Debug/: vc140.idb
Space Shooter/Debug/Space Shooter.tlog/: CL.command.1.tlog  CL.read.1.tlog  (+5 more)
(+59 files in other folders)
